# prediction-markets

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/insider_detector/: __init__.py  cli.py  config.py  models.py
src/insider_detector/analysis/: __init__.py  patterns.py  pnl.py  profiler.py
src/insider_detector/backtesting/: __init__.py  engine.py  metrics.py  scenarios.py
src/insider_detector/clients/: __init__.py  base.py  kalshi.py  polymarket.py
src/insider_detector/dashboard/: __init__.py  server.py
src/insider_detector/dashboard/static/: index.html
src/insider_detector/detection/: __init__.py  alerts.py  detector.py
src/insider_detector/notifications/: __init__.py
src/insider_detector/portfolio/: __init__.py  tracker.py  trade_log.py
src/insider_detector/storage/: __init__.py  cache.py  database.py
